tests/fixtures/guardrails/valid/app/services/routes/map.ts
import { writeProducts } from "~/domain/products/write.server";

export function buildRouteMap() {
  return writeProducts;
}
