tests/fixtures/guardrails/invalid/webhook-member-access-imported-binding-bypass/app/routes/webhooks.app.uninstalled.ts
import { enqueueWebhookInboxEvent } from "~/domain/webhooks/enqueue.server";

export async function action() {
  return enqueueWebhookInboxEvent.name;
}
